target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/a-ntatin/mckesson-my-stp-poc.git
    app.quarkus.io/quarkus-version: 3.20.1
    app.quarkus.io/commit-id: adfa9904f48c39852a4992fd98b97522f154654b
    app.quarkus.io/vcs-uri: https://github.com/a-ntatin/mckesson-my-stp-poc.git
    app.quarkus.io/build-timestamp: 2025-08-01 - 08:45:38 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: my-stp-poc
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: my-stp-poc
  namespace: ibm-ce-prometheus
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: my-stp-poc
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/a-ntatin/mckesson-my-stp-poc.git
    app.quarkus.io/quarkus-version: 3.20.1
    app.quarkus.io/commit-id: adfa9904f48c39852a4992fd98b97522f154654b
    app.quarkus.io/vcs-uri: https://github.com/a-ntatin/mckesson-my-stp-poc.git
    app.quarkus.io/build-timestamp: 2025-08-01 - 08:45:38 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: my-stp-poc
  name: my-stp-poc
  namespace: ibm-ce-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
      app.kubernetes.io/name: my-stp-poc
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: https://github.com/a-ntatin/mckesson-my-stp-poc.git
        app.quarkus.io/quarkus-version: 3.20.1
        app.quarkus.io/commit-id: adfa9904f48c39852a4992fd98b97522f154654b
        app.quarkus.io/vcs-uri: https://github.com/a-ntatin/mckesson-my-stp-poc.git
        app.quarkus.io/build-timestamp: 2025-08-01 - 08:45:38 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: my-stp-poc
    spec:
      containers:
        - image: quay.io/a.ntatin/vz-rfp-gen:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: my-stp-poc
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/a-ntatin/mckesson-my-stp-poc.git
    app.quarkus.io/quarkus-version: 3.20.1
    app.quarkus.io/commit-id: adfa9904f48c39852a4992fd98b97522f154654b
    app.quarkus.io/vcs-uri: https://github.com/a-ntatin/mckesson-my-stp-poc.git
    app.quarkus.io/build-timestamp: 2025-08-01 - 08:45:38 +0000
  labels:
    app.kubernetes.io/name: my-stp-poc
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: my-stp-poc
  namespace: ibm-ce-prometheus
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: my-stp-poc
